# FlexMC

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: asan.yml  cmake-msvc.yml  cmake.yml  github-actions-demo.yml  linux-benchmark.yml  linux.yml  tests-debug-64.yml  windows-benchmark.yml  windows.yml
app/: CMakeLists.txt  app_config.h.in
app/src/: CMakeLists.txt  app.cpp  expression_profiler.cpp  expression_profiler.h
benchmarking/: CMakeLists.txt
benchmarking/src/: CMakeLists.txt  benchmarking.cpp
flexmc/: CMakeLists.txt  flexmc.sln
flexmc/app/: app.vcxproj  app.vcxproj.filters
flexmc/app/src/: app.cpp  expression_profiler.cpp  expression_profiler.h
flexmc/flexmc/: .editorconfig  expression_parser.cpp  expression_parser.h  expression_stacks.cpp  expression_stacks.h  flexmc.cpp  flexmc.vcxproj  flexmc.vcxproj.filters  functions_real.cpp  functions_real.h  language_constants.h  lexer.cpp  lexer.h  main.cpp  operand.h  operands.cpp  operands.h  operation.cpp  operation.h  operation_compiler.cpp  operations.h  operator_compiler.h  operators_calc.cpp  operators_calc.h  shuntingyard.cpp  terminals.h  tokens.cpp  tokens.h
flexmc/flexmc/src/: expression_compiler.cpp  expression_compiler.h  expression_parser.cpp  expression_parser.h  expression_stacks.cpp  expression_stacks.h  functions_real.h  lexer.cpp  operand.cpp  operation.h  operation_compiler.cpp  operation_compiler.h  operators_calc.cpp  terminals.h  tokens.h
flexmc/src/: CMakeLists.txt  calc_types.cpp  calc_types.h  language_error.cpp  language_error.h  lexer.cpp  lexer.h  terminals.h  tokens.cpp  tokens.h  utils.h
flexmc/src/expression/: expression_calculator.cpp  expression_calculator.h  expression_compiler.cpp  expression_compiler.h  expression_parser.cpp  expression_parser.h  expression_stacks.cpp  expression_stacks.h  functions_real.cpp  functions_real.h  operand.cpp  operand.h  operation.cpp  operation.h  operation_compiler.cpp  operation_compiler.h  operators_calc.cpp  operators_calc.h  static_variables.h
flexmc/src/expression/operations/: functions_real.cpp  functions_real.h  operation.cpp  operation.h  operation_compiler.cpp  operation_compiler.h  operators_calc.cpp  operators_calc.h
flexmc/src/parser/: line_parser.cpp  line_parser.h
flexmc/src/statement/: assignment_parser.cpp  assignment_parser.h  statement_definitions.h  statement_parser.cpp  statement_parser.h
flexmc/swigpython/: _flexmc.cp310-win_amd64.pyd  flexmc.i  flexmc.py  flexmc_wrap.cxx  setup.py  swigpython.pyproj  test_mc.py
flexmc/tests/: test_expression_compiler.cpp  test_expression_parser.cpp  test_lexer.cpp  tests.vcxproj  tests.vcxproj.filters
flexmc/tests/src/: test_expression_compiler.cpp  test_expression_parser.cpp  test_lexer.cpp
swig_python/: CMakeLists.txt  flexmc.i  setup.py
tests/: CMakeLists.txt  test_assignment_parser.cpp  test_expression_compiler.cpp  test_expression_parser.cpp  test_lexer.cpp  test_line_parser.cpp  test_statement_parser.cpp  test_unit_static_variable_storage.cpp
tests/src/: CMakeLists.txt  test_expression_parser.cpp
